Added tc.query() call and moved model compatibility note in llm-providers example notebook

--- a/docs/examples/llm-providers.ipynb
+++ b/docs/examples/llm-providers.ipynb
@@ -2,16 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "47b899bc",
-   "metadata": {},
-   "source": [
-    "# Model Compatibility\n",
-    "\n",
-    "TimeCopilot is not compatible with every model, tool use is required a required feature for a model to be compatible with TimeCopilot."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "9c8d5124",
    "metadata": {},
    "source": [
@@ -507,6 +497,52 @@
    ],
    "source": [
     "print(result.fcst_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "8f591285",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "To calculate the total number of passengers forecasted for the next months using the Prophet model, I will sum up the forecasted values. Here are the forecasted passenger numbers for the next several months:\n",
+      "\n",
+      "1. 466.56\n",
+      "2. 461.04\n",
+      "3. 493.41\n",
+      "4. 492.11\n",
+      "5. 496.45\n",
+      "6. 537.59\n",
+      "7. 577.17\n",
+      "8. 577.60\n",
+      "9. 529.04\n",
+      "10. 493.89\n",
+      "11. 460.03\n",
+      "12. 489.39\n",
+      "\n",
+      "Adding these values gives us a total of approximately \\( 6,074.98 \\) passengers forecasted over the next 12 months.\n",
+      "\n",
+      "This forecast is based on the Prophet model, which has a MASE score of 1.09, indicating its estimation accuracy is relatively good compared to other models.\n"
+     ]
+    }
+   ],
+   "source": [
+    "query_result = tc.query(\"how many passengers will be in total in the next months?\")\n",
+    "print(query_result.output)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47b899bc",
+   "metadata": {},
+   "source": [
+    "# Model Compatibility\n",
+    "\n",
+    "TimeCopilot is not compatible with every model, tool use is required a required feature for a model to be compatible with TimeCopilot."
    ]
   }
  ],
