Swap model for explicit ollama llm provider example

--- a/docs/examples/llm-providers.ipynb
+++ b/docs/examples/llm-providers.ipynb
@@ -303,7 +303,7 @@
     "from pydantic_ai.providers.ollama import OllamaProvider\n",
     "\n",
     "llm = OpenAIChatModel(\n",
-    "    model_name=\"llama3.1:latest\",\n",
+    "    model_name=\"gpt-oss:20b\",\n",
     "    provider=OllamaProvider(base_url=\"http://localhost:11434/v1\"),\n",
     ")\n",
     "\n",
