--- a/docs/examples/forecaster-quickstart.ipynb
+++ b/docs/examples/forecaster-quickstart.ipynb
@@ -247,15 +247,127 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "6a8ae523",
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9d08da3e",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h = 2 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:p-8436:t-25124:modeling_flowstate.py:__init__:Number of encoder parameters: 7885.8240000000005k\n",
+      "INFO:p-8436:t-25124:modeling_flowstate.py:__init__:Number of dencoder parameters: 1181.952k (14.99%)\n",
+      "100%|██████████| 1/1 [00:00<00:00,  1.28it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      unique_id         ds    FlowState\n",
+      "0  Black Friday 2025-09-07    98.772888\n",
+      "1  Black Friday 2025-09-14     6.484253\n",
+      "2  Cyber Monday 2025-09-07   502.096191\n",
+      "3  Cyber Monday 2025-09-14    20.447998\n",
+      "4     Halloween 2025-09-07  9163.925781\n",
+      " h = 1 \n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:p-8436:t-25124:modeling_flowstate.py:__init__:Number of encoder parameters: 7885.8240000000005k\n",
+      "INFO:p-8436:t-25124:modeling_flowstate.py:__init__:Number of dencoder parameters: 1181.952k (14.99%)\n",
+      "100%|██████████| 1/1 [00:00<00:00,  1.33it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      unique_id         ds    FlowState\n",
+      "0  Black Friday 2025-09-07    98.772888\n",
+      "1  Cyber Monday 2025-09-07   502.096191\n",
+      "2     Halloween 2025-09-07  9163.925781\n",
+      "3   Oktoberfest 2025-09-07  2700.528320\n",
+      "4   Pride Month 2025-09-07  2290.789795\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from timecopilot import TimeCopilotForecaster\n",
+    "from timecopilot.models.foundation.flowstate import FlowState\n",
+    "\n",
+    "\n",
+    "\n",
+    "df = pd.read_csv(\n",
+    "    \"https://timecopilot.s3.amazonaws.com/public/data/events_pageviews.csv\",\n",
+    "    parse_dates=[\"ds\"],\n",
+    ")\n",
+    "\n",
+    "df_w = (\n",
+    "    df\n",
+    "    .set_index(\"ds\")\n",
+    "    .groupby(\"unique_id\")[\"y\"]\n",
+    "    .resample(\"W\")\n",
+    "    .sum()\n",
+    "    .reset_index()\n",
+    ")\n",
+    "\n",
+    "\n",
+    "\n",
+    "tcf = TimeCopilotForecaster(\n",
+    "    models=[\n",
+    "        FlowState(),  \n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "print(\"h = 2 \")\n",
+    "fcst_h2 = tcf.forecast(\n",
+    "    df=df_w,\n",
+    "    h=2,\n",
+    "    freq=\"W\",\n",
+    ")\n",
+    "print(fcst_h2.head())\n",
+    "\n",
+    "print(\" h = 1 \")\n",
+    "fcst_h1 = tcf.forecast(\n",
+    "    df=df_w,\n",
+    "    h=1,\n",
+    "    freq=\"W\",\n",
+    ")\n",
+    "print(fcst_h1.head())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37ba8935",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "myenv",
    "language": "python",
    "name": "python3"
   },
@@ -269,7 +381,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.12"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
