fix flowstate h=1 crash
removed extra squeeze in _predict_batch so flowstate returns 2D arrays for h=1 with single unique_id.

--- a/docs/examples/forecaster-quickstart.ipynb
+++ b/docs/examples/forecaster-quickstart.ipynb
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "9d08da3e",
    "metadata": {},
    "outputs": [
@@ -256,6 +256,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      " See https://github.com/google-research/timesfm/blob/master/README.md for updated APIs.\n",
       "h = 2 \n"
      ]
     },
@@ -263,21 +264,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:p-8436:t-25124:modeling_flowstate.py:__init__:Number of encoder parameters: 7885.8240000000005k\n",
-      "INFO:p-8436:t-25124:modeling_flowstate.py:__init__:Number of dencoder parameters: 1181.952k (14.99%)\n",
-      "100%|██████████| 1/1 [00:00<00:00,  1.28it/s]\n"
+      "INFO:p-29740:t-25856:modeling_flowstate.py:__init__:Number of encoder parameters: 7885.8240000000005k\n",
+      "INFO:p-29740:t-25856:modeling_flowstate.py:__init__:Number of dencoder parameters: 1181.952k (14.99%)\n",
+      "100%|██████████| 1/1 [00:00<00:00,  1.74it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      unique_id         ds    FlowState\n",
-      "0  Black Friday 2025-09-07    98.772888\n",
-      "1  Black Friday 2025-09-14     6.484253\n",
-      "2  Cyber Monday 2025-09-07   502.096191\n",
-      "3  Cyber Monday 2025-09-14    20.447998\n",
-      "4     Halloween 2025-09-07  9163.925781\n",
+      "  unique_id         ds  FlowState\n",
+      "0     brent 2025-09-14 -10.250992\n",
+      "1     brent 2025-09-21  -7.985748\n",
       " h = 1 \n"
      ]
     },
@@ -285,21 +283,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:p-8436:t-25124:modeling_flowstate.py:__init__:Number of encoder parameters: 7885.8240000000005k\n",
-      "INFO:p-8436:t-25124:modeling_flowstate.py:__init__:Number of dencoder parameters: 1181.952k (14.99%)\n",
-      "100%|██████████| 1/1 [00:00<00:00,  1.33it/s]"
+      "INFO:p-29740:t-25856:modeling_flowstate.py:__init__:Number of encoder parameters: 7885.8240000000005k\n",
+      "INFO:p-29740:t-25856:modeling_flowstate.py:__init__:Number of dencoder parameters: 1181.952k (14.99%)\n",
+      "100%|██████████| 1/1 [00:00<00:00,  2.07it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      unique_id         ds    FlowState\n",
-      "0  Black Friday 2025-09-07    98.772888\n",
-      "1  Cyber Monday 2025-09-07   502.096191\n",
-      "2     Halloween 2025-09-07  9163.925781\n",
-      "3   Oktoberfest 2025-09-07  2700.528320\n",
-      "4   Pride Month 2025-09-07  2290.789795\n"
+      "  unique_id         ds  FlowState\n",
+      "0     brent 2025-09-14 -10.250992\n"
      ]
     },
     {
@@ -317,8 +311,9 @@
     "\n",
     "\n",
     "\n",
-    "df = pd.read_csv(\n",
-    "    \"https://timecopilot.s3.amazonaws.com/public/data/events_pageviews.csv\",\n",
+    "df = pd.read_excel(\n",
+    "    # \"https://timecopilot.s3.amazonaws.com/public/data/events_pageviews.csv\",\n",
+    "    'D:/AO/timecopilot/Brent_v3.M.xlsx',\n",
     "    parse_dates=[\"ds\"],\n",
     ")\n",
     "\n",
@@ -358,11 +353,185 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "37ba8935",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    unique_id         ds      y\n",
+      "0       brent 2005-09-01  63.48\n",
+      "1       brent 2005-10-01  58.10\n",
+      "2       brent 2005-11-01  55.05\n",
+      "3       brent 2005-12-01  58.98\n",
+      "4       brent 2006-01-01  65.99\n",
+      "..        ...        ...    ...\n",
+      "236     brent 2025-05-01  63.90\n",
+      "237     brent 2025-06-01  67.61\n",
+      "238     brent 2025-07-01  72.53\n",
+      "239     brent 2025-08-01  68.12\n",
+      "240     brent 2025-09-01  66.75\n",
+      "\n",
+      "[241 rows x 3 columns]\n",
+      "        unique_id          ds      y\n",
+      "0     Oktoberfest  2020-01-31  25376\n",
+      "1     Oktoberfest  2020-02-29  28470\n",
+      "2     Oktoberfest  2020-03-31  23816\n",
+      "3     Oktoberfest  2020-04-30  46186\n",
+      "4     Oktoberfest  2020-05-31  31213\n",
+      "..            ...         ...    ...\n",
+      "403  Thanksgiving  2025-04-30  47655\n",
+      "404  Thanksgiving  2025-05-31  48667\n",
+      "405  Thanksgiving  2025-06-30  56856\n",
+      "406  Thanksgiving  2025-07-31  38935\n",
+      "407  Thanksgiving  2025-08-31  50620\n",
+      "\n",
+      "[408 rows x 3 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "df = pd.read_excel('D:/AO/timecopilot/Brent_v3.M.xlsx')\n",
+    "print(df)\n",
+    "\n",
+    "\n",
+    "import pandas as pd\n",
+    "df = pd.read_csv('https://timecopilot.s3.amazonaws.com/public/data/events_pageviews.csv')\n",
+    "print(df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "0fb3f02c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>unique_id</th>\n",
+       "      <th>ds</th>\n",
+       "      <th>y</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Oktoberfest</td>\n",
+       "      <td>2020-01-31</td>\n",
+       "      <td>25376</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Oktoberfest</td>\n",
+       "      <td>2020-02-29</td>\n",
+       "      <td>28470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Oktoberfest</td>\n",
+       "      <td>2020-03-31</td>\n",
+       "      <td>23816</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Oktoberfest</td>\n",
+       "      <td>2020-04-30</td>\n",
+       "      <td>46186</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Oktoberfest</td>\n",
+       "      <td>2020-05-31</td>\n",
+       "      <td>31213</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>403</th>\n",
+       "      <td>Thanksgiving</td>\n",
+       "      <td>2025-04-30</td>\n",
+       "      <td>47655</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>404</th>\n",
+       "      <td>Thanksgiving</td>\n",
+       "      <td>2025-05-31</td>\n",
+       "      <td>48667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>405</th>\n",
+       "      <td>Thanksgiving</td>\n",
+       "      <td>2025-06-30</td>\n",
+       "      <td>56856</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>406</th>\n",
+       "      <td>Thanksgiving</td>\n",
+       "      <td>2025-07-31</td>\n",
+       "      <td>38935</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>407</th>\n",
+       "      <td>Thanksgiving</td>\n",
+       "      <td>2025-08-31</td>\n",
+       "      <td>50620</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>408 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        unique_id          ds      y\n",
+       "0     Oktoberfest  2020-01-31  25376\n",
+       "1     Oktoberfest  2020-02-29  28470\n",
+       "2     Oktoberfest  2020-03-31  23816\n",
+       "3     Oktoberfest  2020-04-30  46186\n",
+       "4     Oktoberfest  2020-05-31  31213\n",
+       "..            ...         ...    ...\n",
+       "403  Thanksgiving  2025-04-30  47655\n",
+       "404  Thanksgiving  2025-05-31  48667\n",
+       "405  Thanksgiving  2025-06-30  56856\n",
+       "406  Thanksgiving  2025-07-31  38935\n",
+       "407  Thanksgiving  2025-08-31  50620\n",
+       "\n",
+       "[408 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
   }
  ],
  "metadata": {
