docs: aws-bedrock notebook is functioning

--- a/docs/examples/aws-bedrock.ipynb
+++ b/docs/examples/aws-bedrock.ipynb
@@ -31,18 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6767c947",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import pydantic_ai\n",
-    "print(pydantic_ai.__version__)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "30e306f7",
    "metadata": {},
    "outputs": [],
@@ -52,9 +41,7 @@
     "\n",
     "from timecopilot import TimeCopilot\n",
     "\n",
-    "import pandas as pd\n",
-    "\n",
-    "from os import environ"
+    "import pandas as pd"
    ]
   },
   {
@@ -64,10 +51,9 @@
    "source": [
     "## Environment Variables\n",
     "\n",
+    "Api keys and other configuration elements may need to be loaded into the environment so pydantic can read them during setup, at least when specifying the llm with a string. \n",
     "\n",
-    "If using a Bedrock API key, `AWS_BEARER_TOKEN` is the only thing you need to load into the environment. If using a standard AWS access key, you will need to set the environment variables `AWS_ACCESS_KEY_ID`, `AWS_SECRET_ACCESS_KEY`, and `AWS_DEFAULT_REGION`.\n",
-    "\n",
-    "It is probably better to use a Bedrock API key as that should limit permissions granted to the key.\n"
+    "If using a Bedrock API key, `AWS_DEFAULT_REGION` needs to be set to your preferred region. You'll also need to set either `AWS_BEARER_TOKEN` if using a bedrock api key or `AWS_ACCESS_KEY_ID`, `AWS_SECRET_ACCESS_KEY` if using a standard AWS access key."
    ]
   },
   {
@@ -89,11 +75,12 @@
    },
    "outputs": [],
    "source": [
+    "export AWS_DEFAULT_REGION='us-east-1'  # or your preferred region\n",
+    "# and one of the following:\n",
     "export AWS_BEARER_TOKEN_BEDROCK='your-api-key'\n",
     "# or:\n",
     "export AWS_ACCESS_KEY_ID='your-access-key'\n",
-    "export AWS_SECRET_ACCESS_KEY='your-secret-key'\n",
-    "export AWS_DEFAULT_REGION='us-east-1'  # or your preferred region"
+    "export AWS_SECRET_ACCESS_KEY='your-secret-key'\n"
    ]
   },
   {
@@ -128,10 +115,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "7954a291",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from dotenv import load_dotenv\n",
     "\n",
@@ -155,18 +153,18 @@
    "id": "76d8b0d6",
    "metadata": {},
    "source": [
-    "String example:"
+    "### String example:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "667ef66b",
    "metadata": {},
    "outputs": [],
    "source": [
     "tc = TimeCopilot(\n",
-    "    llm=\"bedrock:openai.gpt-oss-20b-1:0\",   \n",
+    "    llm='bedrock:us.anthropic.claude-3-5-sonnet-20241022-v2:0',\n",
     ")"
    ]
   },
@@ -175,7 +173,9 @@
    "id": "4cd658a8",
    "metadata": {},
    "source": [
-    "BedrockConverseModel example:"
+    "### BedrockConverseModel example:\n",
+    "\n",
+    "If you want to load your keys with a non-environment based method, this is where you would use those keys by [instantiating BedrockConverseModel with a BedrockProvider](https://ai.pydantic.dev/models/bedrock/#provider-argument)."
    ]
   },
   {
@@ -188,36 +188,12 @@
     "from pydantic_ai.models.bedrock import BedrockConverseModel\n",
     "\n",
     "model = BedrockConverseModel(\n",
-    "    'openai.gpt-oss-20b-1:0',\n",
+    "    'us.anthropic.claude-3-5-sonnet-20241022-v2:0'\n",
     "    \n",
     ")\n",
     "tc = TimeCopilot(\n",
     "    llm=model,\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5ee67b8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pydantic_ai.models.bedrock import BedrockModelSettings\n",
-    "\n",
-    "from pydantic_ai.providers.bedrock import BedrockProvider\n",
-    "\n",
-    "# bedrock_provider = BedrockProvider(\n",
-    "    # api_key = environ['AWS_BEARER_TOKEN_BEDROCK'],\n",
-    "    # region_name=environ['AWS_DEFAULT_REGION'],\n",
-    "\n",
-    "    # aws_access_key_id='your-access-key',\n",
-    "    # aws_secret_access_key='your-secret-key',\n",
-    "# )\n",
-    "\n",
-    "# tc = TimeCopilot(\n",
-    "    # llm = \n",
-    "# )"
    ]
   },
   {
@@ -230,8 +206,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a3e2c146",
+   "metadata": {},
+   "source": [
+    "### Load your data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c2332b09",
    "metadata": {},
    "outputs": [],
@@ -249,30 +233,157 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6d6b035f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "1it [00:00, 122.86it/s]\n",
+      "1it [00:00, 21.17it/s]\n",
+      "1it [00:00,  8.47it/s]\n",
+      "0it [00:00, ?it/s]11:33:56 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "11:33:56 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "1it [00:03,  3.61s/it]\n",
+      "1it [00:00, 152.35it/s]\n",
+      "11:34:01 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "11:34:01 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "0it [00:00, ?it/s]11:34:06 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "11:34:06 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "1it [00:03,  3.05s/it]11:34:09 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "11:34:09 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "2it [00:06,  3.04s/it]11:34:12 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "11:34:12 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "3it [00:09,  3.10s/it]11:34:15 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "11:34:15 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "4it [00:12,  3.12s/it]11:34:18 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "11:34:19 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "5it [00:15,  3.14s/it]11:34:22 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "11:34:22 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "6it [00:18,  3.14s/it]11:34:25 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "11:34:25 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "7it [00:22,  3.21s/it]11:34:28 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "11:34:28 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "8it [00:25,  3.21s/it]11:34:31 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "11:34:31 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "9it [00:28,  3.16s/it]11:34:34 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "11:34:34 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "10it [00:31,  3.18s/it]11:34:38 - cmdstanpy - INFO - Chain [1] start processing\n",
+      "11:34:38 - cmdstanpy - INFO - Chain [1] done processing\n",
+      "11it [00:34,  3.16s/it]\n"
+     ]
+    }
+   ],
    "source": [
     "result = tc.forecast(df=df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "1fe2ed8a",
+   "execution_count": 6,
+   "id": "3ce7569a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AgentRunResult(output=ForecastAgentOutput(tsfeatures_analysis='The time series analysis reveals strong seasonal and trend components:\\n1. High seasonal strength (0.98) indicates pronounced yearly patterns\\n2. Strong positive autocorrelation (x_acf1: 0.95) suggests strong trend\\n3. Significant Holt-Winters seasonality (hw_gamma: 0.75) confirms seasonal importance\\n4. High stability (0.93) indicates consistent patterns\\n5. Non-stationary series (KPSS: 2.74) confirms strong trend\\n6. Clear seasonal peaks (July) and troughs (November)', selected_model='Prophet', model_details='Prophet is a decomposition-based forecasting model developed by Facebook that:\\n1. Handles multiple seasonalities automatically\\n2. Is robust to missing data and outliers\\n3. Automatically detects trend changes\\n4. Incorporates holiday effects\\n5. Works well with strong seasonal patterns and trends\\n6. Uses Bayesian methods for uncertainty estimation', model_comparison='Cross-validation results (MASE):\\n1. Prophet: 1.09 (best performer)\\n2. DynamicOptimizedTheta: 1.66\\n3. AutoETS: 2.38\\n4. AutoARIMA: 2.40\\n5. SeasonalNaive: 2.49\\n\\nProphet significantly outperformed other models, showing superior handling of the strong seasonal patterns and trend. The DynamicOptimizedTheta performed second-best but with notably higher error. Traditional models (AutoETS, AutoARIMA) struggled with the combination of strong trend and seasonality.', is_better_than_seasonal_naive=True, reason_for_selection='Prophet was selected because:\\n1. Best MASE score (1.09) among all tested models\\n2. Significantly outperformed the seasonal naive benchmark (2.49)\\n3. Well-suited for the identified strong seasonal patterns\\n4. Capable of handling the pronounced trend component\\n5. Robust to the detected anomalies\\n6. Provides good uncertainty estimates', forecast_analysis='The forecast shows:\\n1. Continuing upward trend in passenger numbers\\n2. Preserved seasonal pattern with peaks in summer months\\n3. Clear seasonal amplitude that increases with the trend\\n4. Forecast maintains realistic growth rate based on historical patterns\\n5. Summer peaks (July-August) consistently show highest passenger numbers\\n6. Winter troughs (November-January) show expected seasonal dips\\n7. Growth trajectory appears sustainable and aligned with historical patterns', anomaly_analysis='Anomaly analysis reveals:\\n1. 8 anomalies detected (6.1% of data points)\\n2. Concentrated in summer months (July-August)\\n3. Most anomalies in later years (1955-1960)\\n4. Suggests unusual peak season activity\\n5. Pattern indicates systematic summer overperformance\\n6. Anomalies align with rapid growth periods\\n7. No anomalies in winter months, indicating stable low-season patterns\\n8. Recommendations:\\n   - Monitor summer capacity planning\\n   - Consider these peaks for future forecasting\\n   - Adjust resources for high-season operations', user_query_response='The analysis has been completed following all required steps:\\n\\n1. Time series features show strong seasonality and trend\\n2. Prophet model selected as best performer with MASE of 1.09\\n3. Forecast indicates continued growth with seasonal patterns\\n4. 8 anomalies detected, mainly in summer peaks\\n\\nThe time series represents monthly air passenger counts, showing clear yearly patterns with summer peaks and winter troughs. The forecast suggests continued growth while maintaining these seasonal patterns. Special attention should be paid to summer months due to detected anomalies in peak seasons.'))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3008720e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The time series analysis reveals strong seasonal and trend components:\n",
+      "1. High seasonal strength (0.98) indicates pronounced yearly patterns\n",
+      "2. Strong positive autocorrelation (x_acf1: 0.95) suggests strong trend\n",
+      "3. Significant Holt-Winters seasonality (hw_gamma: 0.75) confirms seasonal importance\n",
+      "4. High stability (0.93) indicates consistent patterns\n",
+      "5. Non-stationary series (KPSS: 2.74) confirms strong trend\n",
+      "6. Clear seasonal peaks (July) and troughs (November)\n"
+     ]
+    }
+   ],
    "source": [
     "print(result.output.tsfeatures_analysis)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "id": "1fe2ed8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The time series analysis reveals strong seasonal and trend components:\n",
+      "1. High seasonal strength (0.98) indicates pronounced yearly patterns\n",
+      "2. Strong positive autocorrelation (x_acf1: 0.95) suggests strong trend\n",
+      "3. Significant Holt-Winters seasonality (hw_gamma: 0.75) confirms seasonal importance\n",
+      "4. High stability (0.93) indicates consistent patterns\n",
+      "5. Non-stationary series (KPSS: 2.74) confirms strong trend\n",
+      "6. Clear seasonal peaks (July) and troughs (November)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(result.output.tsfeatures_analysis)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "6b660c5c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        unique_id         ds     Prophet\n",
+      "0   AirPassengers 1961-01-01  466.560401\n",
+      "1   AirPassengers 1961-02-01  461.042082\n",
+      "2   AirPassengers 1961-03-01  493.413542\n",
+      "3   AirPassengers 1961-04-01  492.113653\n",
+      "4   AirPassengers 1961-05-01  496.445709\n",
+      "5   AirPassengers 1961-06-01  537.592041\n",
+      "6   AirPassengers 1961-07-01  577.166093\n",
+      "7   AirPassengers 1961-08-01  577.599117\n",
+      "8   AirPassengers 1961-09-01  529.038266\n",
+      "9   AirPassengers 1961-10-01  493.889181\n",
+      "10  AirPassengers 1961-11-01  460.030234\n",
+      "11  AirPassengers 1961-12-01  489.392785\n",
+      "12  AirPassengers 1962-01-01  502.415939\n",
+      "13  AirPassengers 1962-02-01  496.321423\n",
+      "14  AirPassengers 1962-03-01  531.969966\n",
+      "15  AirPassengers 1962-04-01  528.065107\n",
+      "16  AirPassengers 1962-05-01  534.174659\n",
+      "17  AirPassengers 1962-06-01  573.615281\n",
+      "18  AirPassengers 1962-07-01  614.245102\n",
+      "19  AirPassengers 1962-08-01  614.206790\n",
+      "20  AirPassengers 1962-09-01  566.306418\n",
+      "21  AirPassengers 1962-10-01  530.606803\n",
+      "22  AirPassengers 1962-11-01  497.766797\n",
+      "23  AirPassengers 1962-12-01  527.289739\n"
+     ]
+    }
+   ],
    "source": [
     "print(result.fcst_df)"
    ]
@@ -287,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "1af53310",
    "metadata": {},
    "outputs": [],
