docs: add bedrock example to mkdocs, add missing print

--- a/docs/examples/aws-bedrock.ipynb
+++ b/docs/examples/aws-bedrock.ipynb
@@ -405,6 +405,26 @@
    "source": [
     "query_result = tc.query(\"how many passengers will be in total in the next months?\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "02ebf6f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The plot shows how the forecast (blue line) continues the historical pattern of seasonal fluctuations, with higher passenger numbers typically occurring during summer months and lower numbers during winter months. This seasonality is supported by the features data, which shows a strong seasonal_strength of 0.98 and a seasonal period of 12 months.\n",
+      "\n",
+      "The model's performance metric (MASE) for Prophet is 1.09, which is the best among all models tested, suggesting these predictions should be relatively reliable compared to other approaches.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(query_result.output)"
+   ]
   }
  ],
  "metadata": {
