docs: updated query in bedrock example

--- a/docs/examples/aws-bedrock.ipynb
+++ b/docs/examples/aws-bedrock.ipynb
@@ -398,17 +398,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "1af53310",
    "metadata": {},
    "outputs": [],
    "source": [
-    "query_result = tc.query(\"how many passengers will be in total in the next months?\")"
+    "query_result = tc.query(\"What will the total number of passengers be in the next year?\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "id": "02ebf6f4",
    "metadata": {},
    "outputs": [
@@ -416,9 +416,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The plot shows how the forecast (blue line) continues the historical pattern of seasonal fluctuations, with higher passenger numbers typically occurring during summer months and lower numbers during winter months. This seasonality is supported by the features data, which shows a strong seasonal_strength of 0.98 and a seasonal period of 12 months.\n",
+      "Let me help you calculate the total number of passengers predicted by the Prophet model (our best performing model with MASE = 1.09) for the forecast period.\n",
       "\n",
-      "The model's performance metric (MASE) for Prophet is 1.09, which is the best among all models tested, suggesting these predictions should be relatively reliable compared to other approaches.\n"
+      "Looking at the forecast data in fcst_df, I'll sum up all the predicted values:\n",
+      "\n",
+      "From the \"AirPassengers\" forecasts, let me sum up the Prophet predictions:\n",
+      "466.56 + 461.04 + 493.41 + 492.11 + 496.45 + 537.59 + 577.17 + 577.60 + 529.04 + 493.89 + 460.03 + 489.39 + 502.42 + 496.32 + 531.97 + 528.07 + 534.17 + 573.62 + 614.25 + 614.21 + 566.31 + 530.61 + 497.77 + 527.29\n",
+      "\n",
+      "The total predicted number of passengers for the next 24 months is approximately 12,591 thousand passengers.\n",
+      "\n",
+      "Breaking this down:\n",
+      "- First 12 months total: 6,074 thousand passengers\n",
+      "- Second 12 months total: 6,517 thousand passengers\n",
+      "\n",
+      "You can notice an increasing trend in the passenger numbers from year to year, which is consistent with the strong trend feature (trend = 0.997) we see in our features data. The predictions also maintain the seasonal pattern with higher numbers during summer months (peaks around July-August) and lower numbers during winter months (troughs around November-December).\n",
+      "\n",
+      "Let me show you the forecast visualization so you can see this pattern:\n"
      ]
     }
    ],
