docs: update sktime example
modify sktime adapter import in notebook example to reflect move to adapters directory

--- a/docs/examples/sktime.ipynb
+++ b/docs/examples/sktime.ipynb
@@ -47,13 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e1870fe0",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sktime.forecasting.trend import TrendForecaster\n",
-    "from timecopilot.models.sktime import SKTimeAdapter\n",
+    "from timecopilot.models.adapters.sktime import SKTimeAdapter\n",
     "\n",
     "trend_forecaster = TrendForecaster()\n",
     "\n",
