Fix lint and styling issues

--- a/docs/examples/aws-bedrock.ipynb
+++ b/docs/examples/aws-bedrock.ipynb
@@ -37,11 +37,12 @@
    "outputs": [],
    "source": [
     "import nest_asyncio\n",
+    "\n",
     "nest_asyncio.apply()\n",
     "\n",
-    "from timecopilot import TimeCopilot\n",
+    "import pandas as pd\n",
     "\n",
-    "import pandas as pd"
+    "from timecopilot import TimeCopilot"
    ]
   },
   {
@@ -164,7 +165,7 @@
    "outputs": [],
    "source": [
     "tc = TimeCopilot(\n",
-    "    llm='bedrock:us.anthropic.claude-3-5-sonnet-20241022-v2:0',\n",
+    "    llm=\"bedrock:us.anthropic.claude-3-5-sonnet-20241022-v2:0\",\n",
     ")"
    ]
   },
@@ -187,10 +188,7 @@
    "source": [
     "from pydantic_ai.models.bedrock import BedrockConverseModel\n",
     "\n",
-    "model = BedrockConverseModel(\n",
-    "    'us.anthropic.claude-3-5-sonnet-20241022-v2:0'\n",
-    "    \n",
-    ")\n",
+    "model = BedrockConverseModel(\"us.anthropic.claude-3-5-sonnet-20241022-v2:0\")\n",
     "tc = TimeCopilot(\n",
     "    llm=model,\n",
     ")"
@@ -220,7 +218,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"https://timecopilot.s3.amazonaws.com/public/data/air_passengers.csv\")\n"
+    "df = pd.read_csv(\"https://timecopilot.s3.amazonaws.com/public/data/air_passengers.csv\")"
    ]
   },
   {
