--- a/docs/examples/cryptocurrency-quickstart.ipynb
+++ b/docs/examples/cryptocurrency-quickstart.ipynb
@@ -16,23 +16,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import sys\n",
-    "\n",
     "# Import all the timecopilot goodies\n",
-    "import timecopilot\n",
-    "from timecopilot import TimeCopilotForecaster\n",
-    "from timecopilot.models.stats import SeasonalNaive, Theta\n",
-    "from timecopilot.models.foundation.chronos import Chronos\n",
+    "import os\n",
     "\n",
-    "from timecopilot.models.prophet import Prophet\n",
-    "from timecopilot.models.stats import AutoARIMA, AutoETS, SeasonalNaive\n",
-    "from timecopilot.models.foundation.moirai import Moirai\n",
+    "import kagglehub\n",
+    "import numpy as np\n",
     "\n",
     "# Import basic libraries\n",
     "import pandas as pd\n",
-    "import kagglehub\n",
-    "import os\n",
-    "import numpy as np"
+    "\n",
+    "from timecopilot import TimeCopilotForecaster\n",
+    "from timecopilot.models.foundation.chronos import Chronos\n",
+    "from timecopilot.models.foundation.moirai import Moirai\n",
+    "from timecopilot.models.prophet import Prophet\n",
+    "from timecopilot.models.stats import AutoARIMA, AutoETS, SeasonalNaive, Theta"
    ]
   },
   {
@@ -63,7 +60,7 @@
    "outputs": [],
    "source": [
     "files = os.listdir(path)\n",
-    "files = [path+'/'+x for x in files]"
+    "files = [path + \"/\" + x for x in files]"
    ]
   },
   {
@@ -198,18 +195,18 @@
     "# Read all filez and set them up to the readable structure for timecopilot\n",
     "for file in files:\n",
     "    temp_df = pd.read_csv(file)\n",
-    "    temp_df = temp_df[['Symbol','Date','Close']]\n",
-    "    temp_df.columns = ['unique_id','ds','y']\n",
-    "    big_df = pd.concat([big_df,temp_df])\n",
+    "    temp_df = temp_df[[\"Symbol\", \"Date\", \"Close\"]]\n",
+    "    temp_df.columns = [\"unique_id\", \"ds\", \"y\"]\n",
+    "    big_df = pd.concat([big_df, temp_df])\n",
     "\n",
     "big_df = big_df.reset_index(drop=True)\n",
     "big_df[\"ds\"] = pd.to_datetime(big_df[\"ds\"], dayfirst=True, errors=\"coerce\")\n",
     "\n",
-    "# This line will be kept for execution time sanity, feel free to remove it if you want to stress timing a little further. \n",
+    "# This line will be kept for execution time sanity, feel free to remove it if you want to stress timing a little further.\n",
     "# big_df = big_df[big_df.ds >= \"2021-01-01\"]\n",
-    "cryptos=['MIOTA','XEM','ETH','LTC','DOGE','CRO','USDC','ADA']\n",
-    "big_df=big_df[big_df.unique_id.isin(cryptos)]\n",
-    "big_df=big_df.reset_index(drop=True)\n",
+    "cryptos = [\"MIOTA\", \"XEM\", \"ETH\", \"LTC\", \"DOGE\", \"CRO\", \"USDC\", \"ADA\"]\n",
+    "big_df = big_df[big_df.unique_id.isin(cryptos)]\n",
+    "big_df = big_df.reset_index(drop=True)\n",
     "big_df"
    ]
   },
@@ -340,6 +337,7 @@
     "    idx = rng.choice(df_out.index, size=n, replace=False)\n",
     "    df_out.loc[idx, col] = np.nan\n",
     "    return df_out\n",
+    "\n",
     "\n",
     "df_missing = add_missing(big_df, col=\"y\", frac=0.03, seed=42)\n",
     "df_missing = df_missing.sample(frac=1, random_state=42).reset_index(drop=True)\n",
@@ -709,12 +707,14 @@
     }
    ],
    "source": [
-    "anomaly_summary_xlm=anomalies_df[\n",
+    "anomaly_summary_xlm = anomalies_df[\n",
     "    # (anomalies_df.unique_id=='SOL') & \\\n",
-    "    ((anomalies_df['Chronos-anomaly']==True) | \\\n",
-    "     (anomalies_df['SeasonalNaive-anomaly']==True) |\n",
-    "     (anomalies_df['Theta-anomaly']==True)\n",
-    "    )].reset_index(drop=True)\n",
+    "    (\n",
+    "        (anomalies_df[\"Chronos-anomaly\"] == True)\n",
+    "        | (anomalies_df[\"SeasonalNaive-anomaly\"] == True)\n",
+    "        | (anomalies_df[\"Theta-anomaly\"] == True)\n",
+    "    )\n",
+    "].reset_index(drop=True)\n",
     "anomaly_summary_xlm"
    ]
   },
@@ -954,12 +954,14 @@
     }
    ],
    "source": [
-    "anomaly_summary_xlm=anomalies_df[\n",
-    "    (anomalies_df.unique_id=='ADA') & \\\n",
-    "    ((anomalies_df['Chronos-anomaly']==True) | \\\n",
-    "     (anomalies_df['SeasonalNaive-anomaly']==True) |\n",
-    "     (anomalies_df['Theta-anomaly']==True)\n",
-    "    )].reset_index(drop=True)\n",
+    "anomaly_summary_xlm = anomalies_df[\n",
+    "    (anomalies_df.unique_id == \"ADA\")\n",
+    "    & (\n",
+    "        (anomalies_df[\"Chronos-anomaly\"] == True)\n",
+    "        | (anomalies_df[\"SeasonalNaive-anomaly\"] == True)\n",
+    "        | (anomalies_df[\"Theta-anomaly\"] == True)\n",
+    "    )\n",
+    "].reset_index(drop=True)\n",
     "anomaly_summary_xlm"
    ]
   },
@@ -1199,12 +1201,14 @@
     }
    ],
    "source": [
-    "anomaly_summary_xlm=anomalies_df[\n",
-    "    (anomalies_df.unique_id=='ADA') & \\\n",
-    "    ((anomalies_df['Chronos-anomaly']==True) & \\\n",
-    "     (anomalies_df['SeasonalNaive-anomaly']==True) \\\n",
-    "    #  (anomalies_df['Theta-anomaly']==True)\n",
-    "    )].reset_index(drop=True)\n",
+    "anomaly_summary_xlm = anomalies_df[\n",
+    "    (anomalies_df.unique_id == \"ADA\")\n",
+    "    & (\n",
+    "        (anomalies_df[\"Chronos-anomaly\"] == True)\n",
+    "        & (anomalies_df[\"SeasonalNaive-anomaly\"] == True)\n",
+    "        #  (anomalies_df['Theta-anomaly']==True)\n",
+    "    )\n",
+    "].reset_index(drop=True)\n",
     "anomaly_summary_xlm"
    ]
   },
@@ -1241,12 +1245,12 @@
    "source": [
     "tcf1 = TimeCopilotForecaster(\n",
     "    models=[\n",
-    "        AutoARIMA(), \n",
+    "        AutoARIMA(),\n",
     "        Chronos(repo_id=\"amazon/chronos-bolt-mini\"),\n",
     "        Theta(),\n",
-    "        AutoETS(), \n",
-    "        Moirai(), \n",
-    "        Prophet(), \n",
+    "        AutoETS(),\n",
+    "        Moirai(),\n",
+    "        Prophet(),\n",
     "        SeasonalNaive(),\n",
     "    ]\n",
     ")"
@@ -1259,7 +1263,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fcst_df = tcf1.forecast(df=big_df, h=30, level=[80,90])"
+    "fcst_df = tcf1.forecast(df=big_df, h=30, level=[80, 90])"
    ]
   },
   {
@@ -1303,9 +1307,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eth_fcst_normal=fcst_df[(fcst_df.unique_id=='ETH')]\\\n",
-    "    [['unique_id','ds','Chronos','Chronos-lo-80']]\\\n",
-    "    .reset_index(drop=True)"
+    "eth_fcst_normal = fcst_df[(fcst_df.unique_id == \"ETH\")][\n",
+    "    [\"unique_id\", \"ds\", \"Chronos\", \"Chronos-lo-80\"]\n",
+    "].reset_index(drop=True)"
    ]
   },
   {
@@ -1345,9 +1349,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "eth_fcst_missing=fcst_df[(fcst_df.unique_id=='ETH')]\\\n",
-    "    [['unique_id','ds','Chronos','Chronos-lo-80']]\\\n",
-    "    .reset_index(drop=True)"
+    "eth_fcst_missing = fcst_df[(fcst_df.unique_id == \"ETH\")][\n",
+    "    [\"unique_id\", \"ds\", \"Chronos\", \"Chronos-lo-80\"]\n",
+    "].reset_index(drop=True)"
    ]
   },
   {
@@ -1515,9 +1519,9 @@
     }
    ],
    "source": [
-    "compare=eth_fcst_normal.merge(eth_fcst_missing,on=['ds','unique_id'])\n",
-    "compare['dif']=abs(compare['Chronos_x']-compare['Chronos_y'])\n",
-    "print(compare['dif'].sum())"
+    "compare = eth_fcst_normal.merge(eth_fcst_missing, on=[\"ds\", \"unique_id\"])\n",
+    "compare[\"dif\"] = abs(compare[\"Chronos_x\"] - compare[\"Chronos_y\"])\n",
+    "print(compare[\"dif\"].sum())"
    ]
   },
   {
