--- a/docs/examples/anomaly-detection-forecaster-quickstart.ipynb
+++ b/docs/examples/anomaly-detection-forecaster-quickstart.ipynb
@@ -35,6 +35,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "\n",
     "from timecopilot import TimeCopilotForecaster"
    ]
   },
@@ -183,7 +184,7 @@
     "    \"https://timecopilot.s3.amazonaws.com/public/data/the_anomaly_tour.csv\",\n",
     "    parse_dates=[\"ds\"],\n",
     ")\n",
-    "df\n"
+    "df"
    ]
   },
   {
@@ -201,9 +202,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from timecopilot.models.stats import SeasonalNaive, Theta\n",
     "from timecopilot.models.foundation.chronos import Chronos\n",
-    "from timecopilot.models.foundation.flowstate import FlowState"
+    "from timecopilot.models.foundation.flowstate import FlowState\n",
+    "from timecopilot.models.stats import SeasonalNaive, Theta"
    ]
   },
   {
@@ -222,7 +223,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "tcf = TimeCopilotForecaster(\n",
     "    models=[\n",
     "        Chronos(repo_id=\"amazon/chronos-bolt-mini\"),\n",
