--- a/docs/examples/forecaster-quickstart.ipynb
+++ b/docs/examples/forecaster-quickstart.ipynb
@@ -24,6 +24,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "\n",
     "from timecopilot import TimeCopilotForecaster"
    ]
   },
@@ -131,7 +132,7 @@
     "    \"https://timecopilot.s3.amazonaws.com/public/data/air_passengers.csv\",\n",
     "    parse_dates=[\"ds\"],\n",
     ")\n",
-    "df.head()\n"
+    "df.head()"
    ]
   },
   {
@@ -149,9 +150,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from timecopilot.models.foundation.moirai import Moirai\n",
     "from timecopilot.models.prophet import Prophet\n",
-    "from timecopilot.models.stats import AutoARIMA, AutoETS, SeasonalNaive\n",
-    "from timecopilot.models.foundation.moirai import Moirai"
+    "from timecopilot.models.stats import AutoARIMA, AutoETS, SeasonalNaive"
    ]
   },
   {
@@ -170,13 +171,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "tcf = TimeCopilotForecaster(\n",
     "    models=[\n",
-    "        AutoARIMA(), \n",
-    "        AutoETS(), \n",
-    "        Moirai(), \n",
-    "        Prophet(), \n",
+    "        AutoARIMA(),\n",
+    "        AutoETS(),\n",
+    "        Moirai(),\n",
+    "        Prophet(),\n",
     "        SeasonalNaive(),\n",
     "    ]\n",
     ")"
