--- a/docs/examples/aws-bedrock.ipynb
+++ b/docs/examples/aws-bedrock.ipynb
@@ -31,18 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "30e306f7",
    "metadata": {},
    "outputs": [],
    "source": [
     "import nest_asyncio\n",
-    "\n",
-    "nest_asyncio.apply()\n",
-    "\n",
     "import pandas as pd\n",
     "\n",
-    "from timecopilot import TimeCopilot"
+    "from timecopilot import TimeCopilot\n",
+    "\n",
+    "nest_asyncio.apply()\n"
    ]
   },
   {
