--- a/docs/examples/aws-bedrock.ipynb
+++ b/docs/examples/aws-bedrock.ipynb
@@ -41,7 +41,7 @@
     "\n",
     "from timecopilot import TimeCopilot\n",
     "\n",
-    "nest_asyncio.apply()\n"
+    "nest_asyncio.apply()"
    ]
   },
   {
