docs: fixed typo & extra print in bedrock example

--- a/docs/examples/aws-bedrock.ipynb
+++ b/docs/examples/aws-bedrock.ipynb
@@ -88,7 +88,7 @@
    "id": "9c4c7220",
    "metadata": {},
    "source": [
-    "If you store your environment variablesles in a `.env` file, you can use the following load them into your environment from the file:"
+    "If you store your environment variables in a `.env` file, you can use the following load them into your environment from the file:"
    ]
   },
   {
@@ -189,7 +189,6 @@
     "\n",
     "model = BedrockConverseModel(\n",
     "    'us.anthropic.claude-3-5-sonnet-20241022-v2:0'\n",
-    "    \n",
     ")\n",
     "tc = TimeCopilot(\n",
     "    llm=model,\n",
@@ -302,30 +301,6 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "3008720e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The time series analysis reveals strong seasonal and trend components:\n",
-      "1. High seasonal strength (0.98) indicates pronounced yearly patterns\n",
-      "2. Strong positive autocorrelation (x_acf1: 0.95) suggests strong trend\n",
-      "3. Significant Holt-Winters seasonality (hw_gamma: 0.75) confirms seasonal importance\n",
-      "4. High stability (0.93) indicates consistent patterns\n",
-      "5. Non-stationary series (KPSS: 2.74) confirms strong trend\n",
-      "6. Clear seasonal peaks (July) and troughs (November)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(result.output.tsfeatures_analysis)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "1fe2ed8a",
    "metadata": {},
    "outputs": [
     {
